fixed image not centered

--- a/pages/HomePage.module.css
+++ b/pages/HomePage.module.css
@@ -5,7 +5,7 @@
   grid-template-areas: "text image";
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   .detail {
     grid-template-areas: "image" "text";
     width: 100%;
@@ -43,11 +43,13 @@
 .circleimg {
   clip-path: circle();
   grid-area: image;
-  justify-self: center;
   max-width: 100%;
   height: auto;
- }
-  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .social-media {
   border: 1px;
 }
@@ -55,4 +57,3 @@
   margin-right: 20px;
   margin-bottom: 5px;
 }
-
